<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">AppManager</string>
    <string name="app_codename" translatable="false">AM</string>
    <string name="app_description">A simple application manager and backup tool for Android</string>
    <!--<string name="appmanager_privacy_policy_url">https://docs.google.com/document/d/1O-IEn2_9pjP7kWCvkrE2D3t63bsSKihb4tYJNj9jusc/edit?usp=sharing</string>-->
    <string name="appmanager_privacy_policy_url">https://docs.google.com/document/d/1O-IEn2_9pjP7kWCvkrE2D3t63bsSKihb4tYJNj9jusc/pub</string>

    <!-- Labels -->
    <string name="action_sms_backup">Backup SMS</string>
    <string name="action_sms_recover">Restore SMS</string>
    <string name="action_contacts_backup">Backup Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_apps">Installed Apps</string>
    <string name="action_system_apps">System Apps</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_hidden_apps">Hidden Apps</string>
    <string name="action_hide">Hide</string>
    <string name="action_unhide">Unhide</string>
    <string name="action_ram">RAM Info</string>
    <string name="action_ram_description">Clean memory</string>
    <string name="action_device">Device Info</string>
    <string name="action_storage">Storage</string>
    <string name="action_sms">SMS</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_processes_info">Processes Info</string>
    <string name="send_to">Send \"%s\" using</string>
    <string name="deleting">Deleting&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="deleting_done">Files deleted!</string>
    <string name="deleting_error">Something went wrong removing the files</string>
    <string name="search">Search</string>
    <string name="search_hint">Search by name&#8230;</string>
    <string name="search_noresults">No results were found for your search</string>
    <string name="copied_clipboard">Copied to clipboard</string>
    <string name="total_ram">Total RAM :</string>
    <string name="available_ram">Free RAM :</string>
    <string name="ram_status">RAM Status</string>
    <string name="ram_calculation">3.84Gb / 10.46GB</string>
    <string name="app_memory_clean">Memory acceleration</string>
    <string name="app_rublish_clean">Garbage clean-up</string>
    <string name="app_autostart_manage">From Kai management</string>
    <string name="app_software_manage">Software Management</string>
    <string name="cleaned">Rubbish (<xliff:g id="memory">%1$s</xliff:g>)</string>
    <string name="empty_cache">The cache is empty .</string>
    <string name="scanning">Scanning ...</string>
    <string name="scanning_m_of_n">Scanning... %1$d/%2$d</string>
    <string name="software_top_text">Installed - %1$s already installed software models , occupies storage space - %2$s</string>
    <string name="storage_internal">Internal</string>
    <string name="storage_document">Document</string>
    <string name="storage_external">External</string>
    <string name="storage_file_size">size</string>
    <string name="storage_files">Files</string>
    <string name="storage_files_short">files</string>
    <string name="storage_full">Full statistics</string>
    <string name="storage_image">Image</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="no_internet_heading">You\&apos;re offline</string>
    <string name="no_internet_message">You need a WIFI or data connection  in order to proceed to view a content on web page.</string>


    <!-- Messages -->

    <string name="ram_clear_message">
        Clear inactive and background processes.\n\nCompleted and ongoing application\nfunctions will be removed from RAM.\n\nClearing RAM will end some applications.Save data before you clear RAM.\n\nTo enable quick reopening, Android OS
        applications remain in the memory, even
        when they are closed. When there is not
        enough memory, the low memory killer (LMK)
        frees the memory automatically by clearing
        the least recently used (LRU) list.
        If you clear the memory manually,
        applications may take longer to launch.
    </string>


    <!-- Transitions -->
    <string name="transition_app_icon" translatable="false">App Icon Transition</string>

    <!-- Dialogs -->
    <string name="dialog_saved">\"%s\" APK saved</string>
    <string name="dialog_saved_description">\"%1$s\" APK has been saved into \"AppManager\" folder with name: %2$s</string>
    <string name="dialog_saving">Saving %s APK&#8230;</string>
    <string name="dialog_saving_description">AppManager is saving the APK into \"AppManager\" folder.</string>
    <string name="dialog_about">About %s</string>
    <string name="dialog_about_description">Developed by Rudraksh Pahade.</string>
    <string name="dialog_run">Open</string>
    <string name="dialog_run_description">Run this app now</string>
    <string name="dialog_extract">Extract</string>
    <string name="dialog_extract_description">Extract this app under \"AppManager\" directory</string>
    <string name="dialog_extract_fail">Extract failed</string>
    <string name="dialog_extract_fail_description">Unable to extract this APK. Please, try to restart your device.</string>
    <string name="dialog_uninstall">Uninstall</string>
    <string name="dialog_uninstall_description">Uninstall this app right now</string>
    <string name="dialog_uninstalling">Uninstalling %s APK&#8230;</string>
    <string name="dialog_uninstalling_description">AppManager is uninstalling this app. Please wait.</string>
    <string name="dialog_cache">Remove cache</string>
    <string name="dialog_cache_description">Remove the cache for this app</string>
    <string name="dialog_cache_success">Cache deleted</string>
    <string name="dialog_cache_success_description">Cache for %s has been removed</string>
    <string name="dialog_cache_deleting">Deleting cache files&#8230;</string>
    <string name="dialog_cache_deleting_description">Please wait while cache files are being deleted.</string>
    <string name="dialog_clear_data">Clear data</string>
    <string name="dialog_clear_data_description">Remove all application data for this app</string>
    <string name="dialog_clear_data_deleting">Deleting all files&#8230;</string>
    <string name="dialog_clear_data_deleting_description">Please wait while all files are being deleted.</string>
    <string name="dialog_clear_data_success">Data deleted</string>
    <string name="dialog_clear_data_success_description">All data for %s has been removed</string>
    <string name="dialog_root_required">Root required</string>
    <string name="dialog_root_required_description">Your device must be rooted with root permission given. If you have denied access once: Go to SuperUser app to give access to ML Manager.</string>
    <string name="dialog_reboot">Reboot is necessary to display the changes. Do you want to reboot now?</string>
    <string name="dialog_cannot_open">%s can\'t be opened because it\'s hidden. Try to unhide before opening this app.</string>
    <string name="dialog_uninstall_root">Are you sure you want to uninstall?</string>
    <string name="dialog_uninstall_root_description">You are one step away of removing a system app. Do not delete it if you are unsure, it could cause malfunction of the device.</string>
    <string name="dialog_uninstalled_root">%s uninstalled</string>
    <string name="dialog_uninstalled_root_description">Some changes will not be applied until you restart your device. Do you want to restart now?</string>
    <string name="dialog_permissions">Permissions are required</string>
    <string name="dialog_permissions_description">You must accept the permissions to extract and share APKs, clean cache and data.</string>
    <string name="dialog_permissions_description_sms">You must accept the permissions to backup the SMSs.</string>
    <string name="dialog_permissions_description_contacts">You must accept the permissions to backup the Contacts.</string>

    <!-- Settings -->
    <string name="settings_delete_all">Delete all extracted APKs</string>
    <string name="settings_delete_all_description">Remove all the extracted APKs stored in the extraction folder</string>
    <string name="settings_custom_path">Custom folder for extracted APKs</string>
    <string name="settings_custom_sms_path">Default folder for extracted SMSs</string>
    <string name="settings_custom_contacts_path">Default folder for extracted CONTACTSs</string>
    <string name="settings_custom_filename">Default filename for extracted APKs</string>
    <string name="settings_sort_mode">Sort apps by</string>
    <string name="settings_customizations">Customizations</string>
    <string name="settings_primary_color">Primary color</string>
    <string name="settings_primary_color_description">Set the primary color for the toolbar and navigation bar. Requires Android 5.0+</string>
    <string name="settings_fab_color">Floating button color</string>
    <string name="settings_fab_color_description">Set the color for the Floating Action Button (FAB)</string>
    <string name="settings_navigation_black">Show navigation bar in black</string>
    <string name="settings_navigation_black_description">Don\'t use a custom color for the navigation bar.</string>
    <string name="settings_default_customization">Restore customizations</string>
    <string name="settings_default_customization_description">Restore colors to the default values</string>
    <string name="settings_googleplay">Rate on Google Play</string>
    <string name="settings_googleplay_description">Do you have a few seconds to rate this app? We want to hear your opinion</string>
    <string name="settings_googleplus">Join me on Google+</string>
    <string name="settings_facebook">Join me on Facebook</string>
    <string name="settings_twitter">Follow me on Twitter</string>
    <string name="settings_googleplus_description">Want to talk about APKs and keep abreast of developments in the application? Join to our community!</string>
    <string name="settings_license">Open Source licenses</string>
    <string name="settings_about">Made in India</string>

    <!-- Buttons -->
    <string name="button_extract">Extract</string>
    <string name="button_share">Share APK</string>
    <string name="button_undo">Undo</string>
    <string name="button_reboot">Reboot</string>
    <string name="button_later">Later</string>
    <string name="button_uninstall">Uninstall</string>
    <string name="button_default">Default</string>
    <string name="clean_ram">Clear Memory</string>

    <!-- About -->
    <string name="about_description_1">App Developer</string>
    <string name="about_description_2">Icon Designer</string>

    <!-- Toasts -->
    <string name="tap_exit">Press back again to exit</string>
    <string name="title_activity_ad_mob_banner">AdMobBannerActivity</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="ad_mob_banner_id">ca-app-pub-5293031144790539/2510067801</string>
    <string name="ad_mob_interstitial_id">ca-app-pub-5293031144790539/3986801004</string>
</resources>
