<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <PreferenceCategory
        android:title="@string/action_settings">
        <Preference
            android:key="prefDeleteAll"
            android:title="@string/settings_delete_all"
            android:summary="@string/settings_delete_all_description" />
        <Preference
            android:key="prefCustomPath"
            android:title="@string/settings_custom_path" />
        <Preference
            android:key="prefCustomSMSPath"
            android:title="@string/settings_custom_sms_path"/>
        <Preference
            android:key="prefCustomContactsPath"
            android:title="@string/settings_custom_contacts_path"/>
        <ListPreference
            android:key="prefCustomFilename"
            android:title="@string/settings_custom_filename"
            android:entries="@array/filenameEntries"
            android:entryValues="@array/filenameValues"
            android:defaultValue="1" />
        <ListPreference
            android:key="prefSortMode"
            android:title="@string/settings_sort_mode"
            android:entries="@array/sortEntries"
            android:entryValues="@array/sortValues"
            android:defaultValue="1" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/action_about">
        <Preference
            android:key="prefPrivacyPolicy"
            android:title="@string/privacy_policy"/>
        <Preference
            android:key="prefVersion"
            android:title="@string/app_name"
            android:summary="@string/settings_about" />
    </PreferenceCategory>

</PreferenceScreen>