<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/memory_slot_100"
            android:contentDescription="@string/action_ram"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_ram"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@color/primary_light"
        android:layout_below="@+id/lnrlytSpace"
        android:layout_centerHorizontal="true"
        android:id="@+id/lnrlytRamInfo"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_ram"
            android:id="@+id/textViewTotalRam"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_ram"
            android:id="@+id/textViewUsedRam"
            android:padding="5dp"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewRamMsg"
                android:text="@string/ram_clear_message"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/accent"
                android:layout_marginTop="5dp"/>

            <!--<com.andexert.library.RippleView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rippleView"
                android:layout_below="@+id/lnrlytRamInfo"
                rv_centered="true"
                rv_color="@color/icons">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_ram"
                    android:id="@+id/buttonCleanRam"
                    android:padding="5dp"
                    android:textColor="@color/icons"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"/>

            </com.andexert.library.RippleView>-->
            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/buttonCleanRam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/clean_ram"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp" />

        </LinearLayout>

    </ScrollView>



</LinearLayout>