<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayoutMainAppDetails">


    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appDetailToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:navigationIcon="?attr/homeAsUpIndicator">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/appDetailToolbar"
        android:id="@+id/relativeLayout1">
        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:background="@color/list_txt_info_3" />
        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_android"
            android:transitionName="@string/transition_app_icon"
            android:adjustViewBounds="true"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="App"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/app_icon"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/app_version"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/relativeLayout2">
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/id_card"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="5dp">
            <ImageView
                android:id="@+id/app_googleplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_googleplay" />
            <TextView
                android:id="@+id/app_apk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="com.packagename"
                android:textColor="@color/list_txt_info_3"
                android:gravity="center_vertical|center"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"/>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout2">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/start_card"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                app:cardBackgroundColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:text="@string/dialog_run"
                    android:textSize="25sp"
                    android:textColor="@color/list_txt_info_3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/horizontal_description_margin"
                    android:layout_marginRight="@dimen/horizontal_description_margin"
                    android:layout_marginTop="50dp"
                    android:text="@string/dialog_run_description"
                    android:textSize="14sp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/list_txt_info_3"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_below="@id/start_card"
                android:id="@+id/extract_card"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                app:cardBackgroundColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:text="@string/dialog_extract"
                    android:textSize="25sp"
                    android:textColor="@color/list_txt_info_3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/horizontal_description_margin"
                    android:layout_marginRight="@dimen/horizontal_description_margin"
                    android:layout_marginTop="50dp"
                    android:text="@string/dialog_extract_description"
                    android:textSize="14sp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/list_txt_info_3"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_below="@id/extract_card"
                android:id="@+id/uninstall_card"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                app:cardBackgroundColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:text="@string/dialog_uninstall"
                    android:textSize="25sp"
                    android:textColor="@color/list_txt_info_3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/horizontal_description_margin"
                    android:layout_marginRight="@dimen/horizontal_description_margin"
                    android:layout_marginTop="50dp"
                    android:text="@string/dialog_uninstall_description"
                    android:textSize="14sp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/list_txt_info_3"/>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>