<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/app_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_add_user_close_bg"
                android:layout_alignParentEnd="true"/>

            <com.elyeproj.loaderviewlibrary.LoaderTextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-thin"
                android:singleLine="true"
                android:text="App"
                android:textSize="25sp"
                app:use_gradient="true"
                android:textStyle="bold"/>

            <com.elyeproj.loaderviewlibrary.LoaderTextView
                android:id="@+id/txtApk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_vertical"
                android:text="Package"
                android:textSize="14sp" />

            <com.elyeproj.loaderviewlibrary.LoaderImageView
                android:id="@+id/imgIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/txtApk"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:maxHeight="50dp"
                android:maxWidth="50dp"
                app:use_gradient="true"
                android:transitionName="@string/transition_app_icon" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="75dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnExtract"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/list_txt_info_3"
                    android:text="@string/button_extract"
                    style="?android:attr/buttonBarStyle"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btnShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/list_txt_info_3"
                    android:text="@string/button_share"
                    style="?android:attr/buttonBarStyle"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>